[package]
authors = ["Trent Shailer"]
description = "Various helper functions, structures, and traits for working on my Rust projects."
edition = "2024"
license = "MIT OR Apache-2.0"
name = "ts-rust-helper"
rust-version = "1.88"
version = "0.5.0"

[dependencies]
log = { version = "0.4", optional = true }

clap = { version = "4.5", optional = true, features = ["derive"] }
jsonschema = { version = "0.30", optional = true, default-features = false }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
schemars = { version = "1" }

[features]
command = ["config", "dep:clap"]
config = ["json"]
json = ["dep:jsonschema", "dep:serde", "dep:serde_json"]
log = ["dep:log"]
styled = []

[lints.rust]
missing_docs = "warn"
unused_qualifications = "warn"

[lints.clippy]
as_conversions = "warn"
cast_lossless = "warn"
dbg_macro = "warn"
inconsistent_struct_constructor = "warn"
todo = "warn"
unnecessary_self_imports = "warn"
use_self = "warn"
